[gd_scene load_steps=17 format=3 uid="uid://cnalom3wua8rb"]

[ext_resource type="Script" path="res://shop/scripts/Shop.gd" id="1_10sum"]
[ext_resource type="Texture2D" uid="uid://cg2pwyw8wopql" path="res://assets/ui/shop_background.png" id="2_u76mq"]
[ext_resource type="Script" path="res://shop/scripts/shop_ui.gd" id="2_xgpv6"]
[ext_resource type="Resource" uid="uid://1w4eefo5doq8" path="res://shop/resources/testshop.tres" id="3_bfak2"]
[ext_resource type="Texture2D" uid="uid://c6gqyfp6or7gh" path="res://assets/ui/exit_shop_button.png" id="3_oajd3"]
[ext_resource type="PackedScene" uid="uid://duqt05t3ju1qh" path="res://UI/scenes/shop_item_button.tscn" id="4_5kftm"]
[ext_resource type="Texture2D" uid="uid://byc764bxamqti" path="res://assets/ui/exit_shop_button_dark.png" id="4_30yqp"]
[ext_resource type="Texture2D" uid="uid://dan86a158w5j5" path="res://assets/ui/buy_button.png" id="5_5k6y5"]
[ext_resource type="Texture2D" uid="uid://ci8qwi6evljsk" path="res://assets/ui/updatedcurrency.png" id="5_y57y7"]
[ext_resource type="Texture2D" uid="uid://bscc0ecta1ijr" path="res://assets/ui/details_panel.png" id="6_050d1"]
[ext_resource type="Texture2D" uid="uid://fnv12tj2irmx" path="res://assets/ui/buy_button_dark.png" id="6_bma8a"]
[ext_resource type="Script" path="res://currency/scripts/label.gd" id="6_e4j6m"]
[ext_resource type="FontFile" uid="uid://dq6rymvoicb8l" path="res://assets/fonts/CormorantInfant-SemiBold.ttf" id="7_l42hb"]
[ext_resource type="FontFile" uid="uid://y7tht8o6o7xe" path="res://assets/fonts/CormorantInfant-Regular.ttf" id="8_7u1p7"]
[ext_resource type="FontFile" uid="uid://ccghiwn3hcmui" path="res://assets/fonts/CormorantInfant-Bold.ttf" id="11_sc14r"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_deyfl"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_10sum")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 90.0
offset_right = 1760.0
offset_bottom = 990.0
color = Color(0.340339, 0.340339, 0.340339, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 7.0
offset_right = 1920.0
offset_bottom = 1038.0
texture = ExtResource("2_u76mq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_top = 90.0
offset_right = -160.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="TextureButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1333.0
offset_top = 775.0
offset_right = -27.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_oajd3")
texture_pressed = ExtResource("4_30yqp")
stretch_mode = 0

[node name="BuyButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 967.0
offset_top = 775.0
offset_right = 1207.0
offset_bottom = 871.0
texture_normal = ExtResource("5_5k6y5")
texture_pressed = ExtResource("6_bma8a")
stretch_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 150.0
offset_right = 948.0
offset_bottom = 770.0
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ShopItemsContainer" type="VBoxContainer" parent="Control/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 6
script = ExtResource("2_xgpv6")
data = ExtResource("3_bfak2")

[node name="ShopItemButton" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("4_5kftm")]
layout_mode = 2

[node name="ShopItemButton2" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("4_5kftm")]
layout_mode = 2

[node name="ShopItemButton3" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("4_5kftm")]
layout_mode = 2

[node name="ShopItemButton4" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("4_5kftm")]
layout_mode = 2

[node name="ShopItemButton5" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("4_5kftm")]
layout_mode = 2

[node name="DetailsPanel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -630.0
offset_top = 150.0
offset_right = -30.0
offset_bottom = 770.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="Control/DetailsPanel"]
layout_mode = 2
texture = ExtResource("6_050d1")

[node name="Control" type="Control" parent="Control/DetailsPanel"]
layout_mode = 2

[node name="ItemImage" type="TextureRect" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 243.0
offset_bottom = 352.0
scale = Vector2(0.8, 0.8)
texture = SubResource("PlaceholderTexture2D_deyfl")
expand_mode = 1

[node name="ItemName" type="Label" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 297.0
offset_right = 580.0
offset_bottom = 352.0
theme_override_fonts/font = ExtResource("7_l42hb")
theme_override_font_sizes/font_size = 40
text = "Select an Item"
clip_text = true
text_overrun_behavior = 3

[node name="ItemDescription" type="Label" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 360.0
offset_right = 580.0
offset_bottom = 598.0
theme_override_colors/font_color = Color(0.783523, 0.783523, 0.783523, 1)
theme_override_fonts/font = ExtResource("8_7u1p7")
theme_override_font_sizes/font_size = 20
text = "-"
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 3

[node name="Currency" type="TextureRect" parent="Control/DetailsPanel/Control"]
layout_mode = 0
offset_left = 208.0
offset_top = 17.0
offset_right = 728.0
offset_bottom = 487.0
scale = Vector2(0.2, 0.214)
texture = ExtResource("5_y57y7")

[node name="ItemCost" type="Label" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 320.0
offset_top = 20.0
offset_right = 588.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("7_l42hb")
theme_override_font_sizes/font_size = 42
text = "-"
vertical_alignment = 1
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 3

[node name="CurrencyPanel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_top = 55.0
offset_right = -30.0
offset_bottom = 135.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CurrencyPanel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/CurrencyPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="Control/CurrencyPanel/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("5_y57y7")
expand_mode = 2

[node name="Label" type="Label" parent="Control/CurrencyPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("11_sc14r")
theme_override_font_sizes/font_size = 44
text = "100"
script = ExtResource("6_e4j6m")

[node name="Control" type="Control" parent="Control/CurrencyPanel/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.083
anchor_top = 0.083
anchor_right = 0.917
anchor_bottom = 0.917
offset_left = 30.64
offset_top = 50.36
offset_right = -1440.64
offset_bottom = -771.36
theme_override_fonts/font = ExtResource("11_sc14r")
theme_override_font_sizes/font_size = 64
text = "Shop"

[connection signal="pressed" from="Control/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Control/BuyButton" to="." method="_on_buy_pressed"]
